# prototype-gov-signin

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  REVIEW.md  docker-compose.yml  heroku.yml  pyproject.toml
iam/: .dockerignore  Dockerfile  asgi.py  healthcheck.py  oidc.py  pyproject.toml  settings.py  urls.py  validators.py  wsgi.py
iam/templates/: start.html
iam/templates/account/: login.html  profile.html
iam/templates/oauth2_provider/: _form_field.html  _pagination.html  application_confirm_delete.html  application_detail.html  application_directory.html  application_form.html  application_list.html  application_owners.html  application_registration_form.html  authorization_denied.html  authorize.html  base.html  logout_confirm.html  sign_in_log.html  team.html  team_detail.html  team_list.html
iam/tests/: conftest.py  test_account_adapter.py  test_application_crud.py  test_auto_enrol.py  test_domain_restriction.py  test_oidc_flow.py  test_owner_management.py  test_team_management.py
iam/users/: adapters.py  admin.py  admin_config.py  admin_site.py  apps.py  domains.py  forms.py  models.py  signals.py  views.py
iam/users/migrations/: 0001_initial.py  0002_allowed_email_domains.py  0002_alter_application_algorithm_and_more.py  0002_application_additional_emails_array.py  0002_invitation.py  0003_alter_application_team.py  0003_delete_invitation.py  0003_teams.py  0004_application_additional_emails_and_more.py  0004_unique_email.py  0005_alter_application_team.py  0006_application_is_active.py  0007_signinevent.py  (+1 more)
(+42 files in other folders)
