[project]
name = "prototype-gov-signin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "dj-database-url>=3.1.2",
    "django-allauth[google]>=65.18.0",
    "django-oauth-toolkit>=3.3.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = ["."]
